--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "gsap": "^3.12.5",
     "three": "^0.169.0",
     "vue": "^3.5.11"
   },
@@ -20,7 +21,7 @@
     "@eslint/compat": "^1.2.0",
     "@rushstack/eslint-patch": "^1.10.4",
     "@tsconfig/node20": "^20.1.4",
-    "@types/node": "^22.7.4",
+    "@types/node": "^22.7.5",
     "@types/three": "^0.169.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/eslint-config-prettier": "^10.0.0",
@@ -36,7 +37,7 @@
     "prettier-plugin-organize-imports": "^4.1.0",
     "stats.js": "^0.17.0",
     "tailwindcss": "^3.4.13",
-    "typescript": "~5.6.2",
+    "typescript": "~5.6.3",
     "vite": "^5.4.8",
     "vue-tsc": "^2.1.6"
   }
