camera controls enhancements

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "gsap": "^3.12.5",
+    "camera-controls": "^2.9.0",
     "three": "^0.169.0",
     "vue": "^3.5.11"
   },
