removed outline shader code and made some minor changes

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "camera-controls": "^2.9.0",
     "flag-icons": "^7.2.3",
+    "gsap": "^3.12.5",
     "three": "^0.169.0",
     "vue": "^3.5.11"
   },
